--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -18,3 +18,6 @@
 
 - title: "linkedin"
   href: "https://www.linkedin.com/in/ruiyan-wang-4b05371a8/"
+
+- title: "redbubble"
+  href: "https://www.redbubble.com/people/rywang42/shop"
