--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,8 +1,8 @@
 - title: "watercolour"
   href: "/watercolour/"
 
-# - title: "illustration"
-#   href: "/illustration/"
+- title: "photography"
+  href: "/photography/"
 
 # - title: "covers"
 #   href: "/covers/"
