Forgot to change the folder name in yml

--- a/_galleries/photography.yml
+++ b/_galleries/photography.yml
@@ -151,45 +151,45 @@ arts:
   title: "LA"
   description: "[LA]"
 
-- image: "images/galleries/photography/Haleakalā/IMG_2817.JPG"
+- image: "images/galleries/photography/Haleakala/IMG_2817.JPG"
   order: "31"
-  title: "Haleakalā"
-  description: "[Haleakalā]"
+  title: "Haleakala"
+  description: "[Haleakala]"
 
-- image: "images/galleries/photography/Haleakalā/IMG_2832.JPG"
+- image: "images/galleries/photography/Haleakala/IMG_2832.JPG"
   order: "32"
-  title: "Haleakalā"
-  description: "[Haleakalā]"
+  title: "Haleakala"
+  description: "[Haleakala]"
 
-- image: "images/galleries/photography/Haleakalā/IMG_2849.JPG"
+- image: "images/galleries/photography/Haleakala/IMG_2849.JPG"
   order: "33"
-  title: "Haleakalā"
-  description: "[Haleakalā]"
+  title: "Haleakala"
+  description: "[Haleakala]"
 
-- image: "images/galleries/photography/Haleakalā/IMG_2859.JPG"
+- image: "images/galleries/photography/Haleakala/IMG_2859.JPG"
   order: "34"
-  title: "Haleakalā"
-  description: "[Haleakalā]"
+  title: "Haleakala"
+  description: "[Haleakala]"
 
-- image: "images/galleries/photography/Haleakalā/IMG_2861.JPG"
+- image: "images/galleries/photography/Haleakala/IMG_2861.JPG"
   order: "35"
-  title: "Haleakalā"
-  description: "[Haleakalā]"
+  title: "Haleakala"
+  description: "[Haleakala]"
 
-- image: "images/galleries/photography/Haleakalā/IMG_2862.JPG"
+- image: "images/galleries/photography/Haleakala/IMG_2862.JPG"
   order: "36"
-  title: "Haleakalā"
-  description: "[Haleakalā]"
+  title: "Haleakala"
+  description: "[Haleakala]"
 
-- image: "images/galleries/photography/Haleakalā/IMG_2879.JPG"
+- image: "images/galleries/photography/Haleakala/IMG_2879.JPG"
   order: "37"
-  title: "Haleakalā"
-  description: "[Haleakalā]"
+  title: "Haleakala"
+  description: "[Haleakala]"
 
-- image: "images/galleries/photography/Haleakalā/IMG_2890.JPG"
+- image: "images/galleries/photography/Haleakala/IMG_2890.JPG"
   order: "38"
-  title: "Haleakalā"
-  description: "[Haleakalā]"
+  title: "Haleakala"
+  description: "[Haleakala]"
 
 - image: "images/galleries/photography/Kona/IMG_2986.JPG"
   order: "39"
