--- a/_galleries/watercolour.yml
+++ b/_galleries/watercolour.yml
@@ -321,8 +321,18 @@ arts:
   title: "Pop-up Birthday Card (Sequoia)"
   description: "My first attempt at a pop-up card, to a great mentor and office mate who enjoys hiking and outdoors."
 
-- image: "images/galleries/watercolour/mom-birthday.png"
+- image: "images/galleries/watercolour/mom_birthday.png"
   order: "65"
   title: "My recent big project: a pop-up card for mom's birthday!"
   description: "Featuring several old photos"
+
+- image: "images/galleries/watercolour/white_memorial_fountain.JPG"
+  order: "66"
+  title: "White Memorial Fountain"
+  description: "I was very disappointed at how I presented the water splashes here"
+
+- image: "images/galleries/watercolour/memorial_church.JPG"
+  order: "67"
+  title: "Memorial Church"
+  description: ""
 ---
