--- a/_galleries/watercolour.yml
+++ b/_galleries/watercolour.yml
@@ -326,12 +326,12 @@ arts:
   title: "My recent big project: a pop-up card for mom's birthday!"
   description: "Featuring several old photos"
 
-- image: "images/galleries/watercolour/white_memorial_fountain.JPG"
+- image: "images/galleries/watercolour/white_memorial_fountain.jpg"
   order: "66"
   title: "White Memorial Fountain"
   description: "I was very disappointed at how I presented the water splashes here"
 
-- image: "images/galleries/watercolour/memorial_church.JPG"
+- image: "images/galleries/watercolour/memorial_church.jpg"
   order: "67"
   title: "Memorial Church"
   description: ""
